--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game of Life</title>
-    <style> body {padding: 0; margin: 0;} </style>
-    <script src="p5.min.js"></script>
-    <script src="p5.dom.min.js"></script>
-    <!-- <script src="p5.sound.js"></script> -->
-    <script src="sketch.js"></script>
-  </head>
-  <body>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Game of Life</title>
+
+  <!-- <link href="styles/reset.css" rel="stylesheet"> -->
+  <!-- <link href="styles/global.css" rel="stylesheet"> -->
+  <script src="p5.min.js"></script>
+  <script src="logic.js"></script>
+</head>
+<body>
+   
+  <h1>Game of Life</h1>
+
+  <div id="canvas"></div>
+
+  <div id="">
+    <button class="child" onclick="playPause()">Play/Pause</button>
+    <button class="child" onclick="wipe()">Wipe</button>
+    <button class="child" onclick="randomize()">Randomize</button>
+
+    <!-- <div class="child">
+      <div>Frame Rate</div>
+      <input type="range" min="1" max="100" value="50" class="slider" oninput="fmRate(this.value)">
+      <output id="fmOut"></output>
+    </div> -->
+  </div>
+
+</body>
+
 </html>
